<resources>
    <string name="app_name">Report It</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_chat_user">ChatUserActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_launcher">Launcher Activity</string>
    <string name="title_activity_school_launcher">SchoolAdminActivity</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Login screen-->
    <string name="center_code">Código del centro</string>

    <!-- Questionnaire-->
    <string name="user_type">¿Qué tipo de usuario eres?</string>
    <string name="user_type_student">Estudiante</string>
    <string name="user_type_teacher">Profesor</string>
    <string name="user_type_family">Familiar</string>
    <string name="user_type_neigth">Vecino</string>
    <string name="report_type">¿Qué quieres poner en nuestro conocimiento?</string>
    <string name="info">Información</string>
    <string name="destination_report">¿A quién le está sucendiendo?</string>
    <string name="me_report">A mi</string>
    <string name="other_report">A otra persona</string>
    <string name="urgent_help">¿Necesitas ayuda urgente?</string>
    <string name="bullying">Acoso/ bullying</string>
    <string name="missing_item">Objeto perdido</string>
    <string name="drugs">Venta o consumo de drogas</string>
    <string name="economic">Escacez de recursos económicos</string>
    <string name="fraud">Fraude escolar</string>
    <string name="teacher_problem">Problemas con un profesor/a</string>
    <!--Bullying -->
    <string name="more_info">Necesitamos que nos des más detalles</string>
    <string name="where">¿Dónde ha sucedido?</string>
    <string name="when">¿Cuándo ha ocurrido?</string>
    <string name="who">¿Quién lo ha hecho?</string>
    <string name="who_get">¿Quién lo está sufriendo?</string>
    <string name="what">Cuéntanos qué ha sucedido</string>
    <!-- Missing Object-->
    <string name="more_info_object">Aporta más información relevante</string>
    <string name="what_object">¿Qué objeto has extraviado?</string>
    <!-- Teacher problem -->
    <string name="teacher_info">Ahora, cuéntanos un poco acerca del problema</string>
    <string name="teacher_name">¿Conoces el nombre del docente?</string>
    <!-- Drugs-->
    <string name="about_drugs">Hablemos sobre las drogas</string>
    <string name="sellying_drugs">Venta de drogas</string>
    <string name="taking_drugs">Consumo de drogas</string>
    <string name="where_drugs">¿Dónde se venden?</string>
    <string name="who_drugs">¿Quién se encarga de venderlas/ suministrarlas?</string>
    <string name="taking_drugs_place">¿En qué lugar se consumen?</string>
    <string name="who_take_drugs">¿Quién las consume?</string>
    <string name="help_drugas">¿Te echamos una mano para dejarlo?</string>
    <!--Economic-->
    <string name="relation_economic">¿Con qué está realcionado el aviso?</string>
    <string name="out_school">Extraescolares</string>
    <string name="school_supplies">Materiales escolares</string>
    <string name="excursions">Excursiones y eventos</string>
    <string name="food">Alimentación</string>

    <!-- Errors -->
    <string name="error_code">Código erróneo</string>
    <string name="error_login">No se ha podido iniciar sesión</string>
    <string name="error_connection">Ha ocurrido algún error</string>
    <string name="error_message_reportit">ReportIt no está disponible actualmente</string>

    <!--Buttons -->
    <string name="login_button">Acceder</string>
    <string name="no_code_button">¿No dispone de un código válido?</string>
    <string name="try_another_time">Reintentar</string>
    <string name="cancel">Cancelar</string>
    <string name="continue_btn">Continuar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">Atrás</string>
</resources>